@@ -186,11 +186,6 @@ namespace Bam.Core
 
             ExecutePreBuild(metaDataType);
 
-            if (!System.IO.Directory.Exists(graph.BuildRoot))
-            {
-                System.IO.Directory.CreateDirectory(graph.BuildRoot);
-            }
-
             var threadCount = CommandLineProcessor.Evaluate(new Options.MultiThreaded());
             if (0 == threadCount)
             {
