@@ -79,10 +79,7 @@ namespace Installer
         {
             var path = this.ScriptPath.Parse();
             var dir = System.IO.Path.GetDirectoryName(path);
-            if (!System.IO.Directory.Exists(dir))
-            {
-                System.IO.Directory.CreateDirectory(dir);
-            }
+            Bam.Core.IOWrapper.CreateDirectoryIfNotExists(dir);
             var outputName = this.GetEncapsulatingReferencedModule().Macros["OutputName"];
             using (var scriptWriter = new System.IO.StreamWriter(path))
             {
