@@ -1,3 +1,5 @@
+09-May-2016 Fixes #192. Bam.Core now exposes IOWrapper.CreateDirectory and IOWrapper.CreateDirectoryIfNotExists functions, which wrap around System.IO.Directory.CreateDirectory (and System.IO.Directory.Exists for the latter), but which importantly re-throw any exceptions caught from directory creation and includes the failing path in the exception message, which the System methods do not.
+
 08-May-2016 Issue #233. Using LINQ's FirstOrDefault, instead of Where as well, to identify existing Bam.Core.PathKeys.
 
 08-May-2016 Issue #233. Using LINQ's FirstOrDefault, instead of Where as well, to identify the package definition used for each Module created.
